[package]
name = "micronet"
version = "0.1.0"
authors = ["Scotch101Tape <scotch101tape@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
defmt-rtt = "0.2.0"
defmt = "0.2.0"
#rubble = "0.0.4"
#rubble-nrf5x = { version = "0.0.4", default-features = false }
microbit = {version = "0.11.0", optional = true}
microbit-v2 = {version = "0.11.0", optional = true}

[features]
v1 = ["microbit"]
v2 = ["microbit-v2"]